
* Changed the way of work with listeners (DOM.addListener to DOM.Events.add).

* Added ability to add a couple events in Events.add.

* Moved jqeuryLoader and socketLoader to CMD object in DOM.

* Fixed bug with deletting in menu js.

* Removed function _editFileName from client.js.

* Removed linuxWatch function from main.js.

* Added tryCatch to fs.watch in cloudcmd.js.

* Set F3 to veiw.


2012.04.22, v0.2.0

* Added alerting about errors.

* Removed Listeners array for DOM.

* Added ability create folders.

* Added filepicker.

* Added ability to load files to cloud 
and get them out to file system.

* Added SSL suport.

* jquery updated to v1.9.1.

* Fixed bug with multiple click events on f3 and f4 buttons.

* Added ability to move files.

* Added ability to degradate to http from https.

* Fixed bug of multiple call of sockets.

* If create directory command executed - loading spinner
would be on top.

* Refactored getShortSize.

* Added update of size on file changing in editor.

* Removed cache control of fs resour.

* Added ability to copy files.

* Fixed bug with saving json to localStorage, it's always
writed root directory.

* Moved out set current file from cloudfunc to client.js.

* Changed the way file table building. From now templating used.

* Changed sync reading of certs to async.

* Updated dropbox to v0.9.2 and moved to packege.json
from storage folder.

* Updated socket.io to v0.9.14.

* Fixed Util.time and Util.timeEnd

* Added ability to select files with Insert key.

* Added ability to delete selected files from DOM.

* Added ability to recursivly get current folder size.

* Added ability to get directory size, when space button
is pressed and current file is directory.

* Added ability to select all files on Ctrl + A

* Fixed the href generation of renamed file.

* Renamed promptNewFolder -> promptNewDir'.

* Added function getSelectedNames.

* Added ability to delete file when f8 key pressed.
