@@ -6,7 +6,7 @@ var CloudCmd, CloudFunc, ace;
     "use strict";
     var cloudcmd                    = CloudCmd,
         Util                        = CloudCmd.Util,
-        KeyBinding                  = CloudCmd.KeyBinding,
+        Key                         = CloudCmd.Key,
         AceEditor                   = {},
         AceLoaded                   = false,
         ReadOnly                    = false,
@@ -137,7 +137,7 @@ var CloudCmd, CloudFunc, ace;
                 initAce_f(data);
                 
                 /* removing keyBinding if set */
-                KeyBinding.unSet();
+                Key.unSet();
                             
                 Util.hidePanel();
                 Util.Images.hideLoad();
@@ -150,7 +150,7 @@ var CloudCmd, CloudFunc, ace;
     /* function hides Ace editor */
     AceEditor.hide                = (function() {
         var lElem = AceElement;
-        KeyBinding.set();
+        Key.set();
         
         if(lElem && FM)
             FM.removeChild(lElem);
@@ -168,7 +168,7 @@ var CloudCmd, CloudFunc, ace;
         var key_event = function(pEvent){
     
             /* если клавиши можно обрабатывать */
-            if( KeyBinding.get() ){
+            if( Key.get() ){
                 /* if f4 or f3 pressed */
                 var lF3 = cloudcmd.KEY.F3;
                 var lF4 = cloudcmd.KEY.F4;
