@@ -43,9 +43,9 @@ var CloudCmd, Util, DOM;
         TRA         : 192 /* Typewritten Reverse Apostrophe (`) */
     };
     
-    CloudCmd.KeyBinding = new KeyBindingProto();
+    CloudCmd.Key = new KeyProto();
     
-    function KeyBindingProto(){
+    function KeyProto(){
         var Binded,
             KEY         = CloudCmd.KEY,
             lTabPanel   = {
