@@ -4,7 +4,7 @@ var CloudCmd, Util, DOM, $;
 (function(CloudCmd, Util, DOM){
     'use strict';
     
-    var KeyBinding                      = CloudCmd.KeyBinding,
+    var Key                             = CloudCmd.Key,
         TerminalId,
         Term,
         Hidden                          = false,
@@ -79,7 +79,7 @@ var CloudCmd, Util, DOM, $;
         if( DOM.hidePanel() ){
             Hidden = false;
             DOM.show(TerminalId);
-            KeyBinding.unSet();
+            Key.unSet();
             Term.resume();
         }
     };
@@ -92,7 +92,7 @@ var CloudCmd, Util, DOM, $;
         
         DOM.hide(TerminalId);
         DOM.showPanel();
-        KeyBinding.set();
+        Key.set();
         
         Term.pause();
     };
@@ -101,7 +101,6 @@ var CloudCmd, Util, DOM, $;
      * function bind keys
      */
     CloudCmd.Terminal.init              = function(){
-        /* loading js and css*/
         Util.loadOnLoad([
             JqueryTerminal.show,
             load,
@@ -109,26 +108,27 @@ var CloudCmd, Util, DOM, $;
             DOM.jqueryLoad,
         ]);
         
-        /* добавляем обработчик клавишь */
-        var lKeyListener = function(pEvent){
+        DOM.Events.addKey( lListener );
+        
+        function lListener(pEvent){
             var lRet        = true,
                 lKEY        = CloudCmd.KEY,
-                lKeyCode    = pEvent.keyCode,
-                lKeyBinded  = KeyBinding.get();
+                lESC        = lKEY.ESC,
+                lTRA        = lKEY.TRA,
+                lKey        = pEvent.keyCode,
+                lBinded     = Key.get();
             /* если клавиши можно обрабатывать */
-            if(Hidden &&  lKeyBinded && lKeyCode === lKEY.TRA){
+            if(Hidden &&  lBinded && lKey === lTRA){
                 JqueryTerminal.show();
                 DOM.preventDefault(pEvent);
                 lRet = false;
             }
             
-            else if(!Hidden && lKeyCode === lKEY.ESC)
+            else if(!Hidden && lKey === lESC)
                 JqueryTerminal.hide();
             
             return lRet;
-        };
-        
-        DOM.Events.addKey( lKeyListener );
+        }
     };
     
     CloudCmd.Terminal.JqueryTerminal    = JqueryTerminal;
