@@ -5,13 +5,13 @@ var CloudCmd, Util, DOM, CloudFunc, $;
 (function(CloudCmd, Util, DOM, CloudFunc){
     'use strict';
     
-    var KeyBinding                      = CloudCmd.KeyBinding,
+    var Key                             = CloudCmd.Key,
         FancyBox                        = {},
         
         Config = {
             beforeShow  : function(){
                 DOM.Images.hideLoad();
-                KeyBinding.unSet();
+                Key.unSet();
             },
             
             afterShow   : function(){
@@ -20,7 +20,7 @@ var CloudCmd, Util, DOM, CloudFunc, $;
                     lEditor.focus();
             },
             
-            beforeClose : Util.retFunc( KeyBinding.set ),
+            beforeClose : Util.retFunc( Key.set ),
             
             openEffect      : 'none',
             closeEffect     : 'none',
@@ -123,7 +123,7 @@ var CloudCmd, Util, DOM, CloudFunc, $;
             DOM.jqueryLoad
         ]);
         
-        DOM.Events.addKey(lKeyListener);
+        DOM.Events.addKey(lListener);
         DOM.setButtonKey('f3', lView);
         
         function lView(){
@@ -131,22 +131,22 @@ var CloudCmd, Util, DOM, CloudFunc, $;
             FancyBox.show( DOM.getCurrentFile() );
         }
         
-        function lKeyListener(pEvent){
+        function lListener(pEvent){
             var lKEY        = CloudCmd.KEY,
                 lF3         = lKEY.F3,
-                F1          = lKEY.F1,
-                lKeyBinded  = KeyBinding.get(),
-                lKeyCode    = pEvent.keyCode;
+                lF1         = lKEY.F1,
+                lBinded     = Key.get(),
+                lKey        = pEvent.keyCode;
             
             /* если клавиши можно обрабатывать */
-            if( lKeyBinded){
-                switch(lKeyCode){
+            if( lBinded){
+                switch(lKey){
                     case lF3:
                         lView();
                         DOM.preventDefault(pEvent);
-                    break;
-                
-                    case lKEY.F1:
+                        break;
+                    
+                    case lF1:
                         FancyBox.showHelp();
                         break;
                 }
